--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,57 +1,33 @@
 
 
 .table-fixed thead {
-
   width: 100%;
-
   background-color: #9147b9;
-
   font-weight: bold;
-
   color: #6363c3;
-
 }
 
 .table-fixed tbody {
-
-
-
   width: 100%;
-
   height: auto;
-
 }
 
 
 
 table{
-
   width: 400px;
-
 }
 
-tbody tr:hover{
 
-  background-color: #6363c3;
-
-}
 
 tbody{
-
   background-color: #9147b9;
-
 }
 
-
-
 body{
-
   background-color: #b59fd1;
-
-  font-family: 'Ubuntu', sans-serif;
-
+  font-family: 'Georgia', sans-serif;
   color: #33737;
-
 }
 
 
@@ -59,13 +35,9 @@ body{
 
 
 .form-control{
-
   width: 30%;
-
 }
 
 button{
-
   display: flex;
-
 }
