--- a/src/gestorBundle/Resources/views/Default/nuevo.html.twig
+++ b/src/gestorBundle/Resources/views/Default/nuevo.html.twig
@@ -1,3 +1,8 @@
-//
 
-{{form(form)}}
+{% extends '::base.html.twig' %}
+
+{% block body %}
+
+<h1>Añadir una empresa</h1>
+    {{form(form)}}
+{% endblock %}
