--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,11 +54,9 @@
 		</form>
 		<ul class="nav menu">
 			<li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
-			<li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Dashboard</a></li>
-			<li><a href="charts.html"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Widgets</a></li>
 			<li><a href="../empresas/all"><svg class="glyph stroked table"><use xlink:href="#stroked-table"></use></svg> Listado empresas</a></li>
 			<li><a href="../empresas/nuevo"><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"></use></svg> Nueva empresa</a></li>
-			<li><a href="../alumnos/all"><svg class="glyph stroked app-window"><use xlink:href="#stroked-app-window"></use></svg> Alumnos</a></li>
+			<li><a href="../alumnos/all"><svg class="glyph stroked app-window"><use xlink:href="#stroked-table"></use></svg> Alumnos</a></li>
 			<li><a href="icons.html"><svg class="glyph stroked star"><use xlink:href="#stroked-star"></use></svg> Icons</a></li>
 			<li class="parent ">
 				<a href="#">
@@ -83,7 +81,7 @@
 				</ul>
 			</li>
 			<li role="presentation" class="divider"></li>
-			<li><a href="login.html"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Login Page</a></li>
+			<li><a href="login.html"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Login</a></li>
 		</ul>
 
 	</div><!--/.sidebar-->
