--- a/src/gestorBundle/Resources/views/Default/all.html.twig
+++ b/src/gestorBundle/Resources/views/Default/all.html.twig
@@ -6,7 +6,7 @@
     {% endblock %}
 
 <h1>TODAS LAS EMPRESAS</h1>
-<table border="2" style="border:20px; width:300px;">
+<table class="table">
   <tr>
       <td>Nombre</td>
       <td>Dirección</td>
