--- a/src/gestorBundle/Resources/views/Default/allalumnos.html.twig
+++ b/src/gestorBundle/Resources/views/Default/allalumnos.html.twig
@@ -6,7 +6,7 @@
     {% endblock %}
 
 <h1>TODOS LOS ALUMNOS</h1>
-<table border="2" style="border:20px; width:300px;">
+<table class="table">
   <tr>
       <td>Nombre</td>
       <td>Apellido 1</td>
