--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -56,6 +56,8 @@
 			<li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
 			<li><a href="../empresas/all"><svg class="glyph stroked table"><use xlink:href="#stroked-table"></use></svg> Listado empresas</a></li>
 			<li><a href="../empresas/nuevo"><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"></use></svg> Nueva empresa</a></li>
+      <li><a href="../profe/all"><svg class="glyph stroked table"><use xlink:href="#stroked-table"></use></svg> Listado profesores</a></li>
+			<li><a href="../profe/nuevo"><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"></use></svg> Nuevo profesor</a></li>
 			<li><a href="../alumnos/all"><svg class="glyph stroked app-window"><use xlink:href="#stroked-table"></use></svg> Alumnos</a></li>
 			<li><a href="icons.html"><svg class="glyph stroked star"><use xlink:href="#stroked-star"></use></svg> Icons</a></li>
 			<li class="parent ">
