relacion alumnosprofesores y API profesores

--- a/src/gestorBundle/Resources/views/Default/allalumnos.html.twig
+++ b/src/gestorBundle/Resources/views/Default/allalumnos.html.twig
@@ -13,6 +13,7 @@
       <td>Apellido 2</td>
       <td>Ciclo</td>
       <td>Empresa</td>
+      <td>Profesor</td>
      </tr>
   {% for alumno in alumnos %}
   <tr>
@@ -21,6 +22,7 @@
       <td>{{ alumno.apellido2 }}</td>
       <td>{{ alumno.ciclo }}</td>
       <td>{{ alumno.empresa.nombre }}</td>
+      <td>{{ alumno.profe.nombre }}</td>
   </tr>
  {% endfor %}
 </table>
