--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,6 +33,7 @@
 				<a class="navbar-brand" href="#"><span>ADMIN</span>FCT</a>
 				<ul class="user-menu">
 					<li class="dropdown pull-right">
+            	<a href="/usuarios/logout"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout <span class="caret"></span></a>
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Usuario <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="#"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
@@ -83,7 +84,7 @@
 				</ul>
 			</li>
 			<li role="presentation" class="divider"></li>
-			<li><a href="login.html"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Login</a></li>
+			<li><a href=../usuarios/register><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Registro</a></li>
 		</ul>
 
 	</div><!--/.sidebar-->
