--- a/src/usuariosBundle/Resources/views/Default/login.html.twig
+++ b/src/usuariosBundle/Resources/views/Default/login.html.twig
@@ -1,22 +1,33 @@
-<body>
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+{% extends '::base.html.twig' %}
+{% block body %}
+{% block stylesheets %}
+        <link href="{{ asset('css/styles.css') }}" type="text/css" rel="stylesheet" />
+        <link href="{{ asset('css/bootstrap-table.css') }}" type="text/css" rel="stylesheet" />
+    {% endblock %}
 
-<form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+<h1>LOGIN</h1>
+<table class="table">
+  <tr>
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+    <form action="{{ path('login') }}" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="_password" />
 
-    <button type="submit">login</button>
-</form>
-</body>
+        {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+        #}
+
+        <button type="submit">login</button>
+    </form>
+</table>
+
+{% endblock %}
