--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -85,6 +85,7 @@
 			</li>
 			<li role="presentation" class="divider"></li>
 			<li><a href=../usuarios/register><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Registro</a></li>
+      <li><a href=../usuarios/admin><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Administrador</a></li>
 		</ul>
 
 	</div><!--/.sidebar-->
